--- a/parque_banque_server/src/main/resources/static/css/mkbtable.css
+++ b/parque_banque_server/src/main/resources/static/css/mkbtable.css
@@ -1,5 +1,9 @@
 * {
-    font-family: sans-serif; /* Change your font family */
+    font-family: sans-serif;
+}
+
+.active {
+    background-color:#37AD49;
 }
 
 .content-table {
