--- a/parque_banque_server/src/main/resources/templates/tenrichestbusinessaccounts.html
+++ b/parque_banque_server/src/main/resources/templates/tenrichestbusinessaccounts.html
@@ -5,6 +5,7 @@
     <title>Zakelijke klanten met het hoogste saldo</title>
     <link th:href="@{/css/mkbtable.css}" href="../static/css/mkbtable.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <script type="text/javascript" src="javascript/mkb_tables.js" defer ></script>
 </head>
 
 <body>
@@ -12,7 +13,7 @@
 <a href="/personeel-home"><button>Terug</button></a>
 <main>
 <h2>Zakelijke Klanten</h2>
-<table  table class="content-table">
+<table id="mkb-list"  table class="content-table">
     <thead>
     <tr>
         <th>Nummer</th>
