--- a/parque_banque_server/src/main/resources/templates/linkpaymentaccount.html
+++ b/parque_banque_server/src/main/resources/templates/linkpaymentaccount.html
@@ -65,6 +65,16 @@
             document.getElementById('sec_error').innerHTML =  'Vul 5 cijfers in'
         }
     }
+
+    // function isvalidIban(iban){
+    //     return /^NL\d{2}[A-Z]{4}0\d{9}$/.test(iban);
+    // }
+    //
+    // function isValidsSecurityCode(secCode) {
+    //     return /^\d{5}$/.test(secCode);
+    //
+    // }
+
 </script>
 </form>
 </body>
