--- a/parque_banque_server/src/main/resources/templates/linkpaymentaccountconfirmation.html
+++ b/parque_banque_server/src/main/resources/templates/linkpaymentaccountconfirmation.html
@@ -4,30 +4,23 @@
     <meta charset="UTF-8">
     <title>Bevestiging rekening toegevoegd</title>
     <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
+    <link th:href="@{/css/linkaccount.css}" href="../static/css/linkaccount.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
 </head>
-<style>
-    h1 {
-        font-size: 20px;
-        margin-left: 2em;
-    }
-
-    button{
-        margin-left: 2em;
-    }
-</style>
 <body>
 <nav class="navigation">
     <ul>
-        <li class="logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque"></a><li/>
-        <li class="nav-link"><a href="/contact">Contact</a></li>
+        <li class="logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}"
+                                                         alt="parque banque"></a></li>
+        <li class="nav-link"><a href="/rekening-overzicht">Rekeningoverzicht</a></li>
+        <li class="nav-link"><a href="/uitloggen">Uitloggen</a></li>
     </ul>
 </nav>
 <br/>
 <br/>
 <br/>
-<h1>U bent als mederekeninghouder toegevoegd aan de rekening. Op het rekeningoverzicht kunt u het saldo van de rekening vinden.</h1>
+<h2>U bent als mederekeninghouder toegevoegd aan de rekening. Op het rekeningoverzicht kunt u de details van uw rekening vinden.</h2>
 <button onclick="document.location ='/rekening-overzicht'">Rekeningoverzicht</button>
 </body>
 </html>
