bugfix voor naam en sector invulformulier

--- a/parque_banque_server/src/main/resources/templates/confirmcompany.html
+++ b/parque_banque_server/src/main/resources/templates/confirmcompany.html
@@ -38,7 +38,7 @@
     <label for="btwNr">Btw-nummer</label>
     <input id="btwNr" type="text" readonly th:field="${companyFormBean.btwNr}"/><br>
     <label for="bedrijfsNaam">Bedrijfsnaam</label>
-    <input id="bedrijfsNaam" type="text" readonly th:field="${companyFormBean.name}"/><br>
+    <input id="bedrijfsNaam" type="text" readonly th:field="${companyFormBean.companyName}"/><br>
     <label for="sector">Sector</label>
     <input id="sector" type="text" readonly th:field="${sector.name}"/><br><br>
 </div>
