styling voor betaalrekening

--- a/parque_banque_server/src/main/resources/templates/newprivateaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newprivateaccount.html
@@ -13,14 +13,21 @@
     <h1>Nieuwe Particuliere Rekening Openen</h1>
 </div>
 
+    <div class="content">
 <div class="sub-div">
     <h3>Druk op bevestigen om een nieuwe rekening te openen of druk op terug om naar de vorige pagina te gaan.
     </h3>
 </div>
 
 <div class="tekst-div">
-    <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+    <h4>
+    Wat kun je van ons verwachten?
     </h4>
+    <ul>
+        <li><img class="icon" th:src="@{images/rsz_party-hat.png}" alt="feestmuts met confetti"><span>Een rekening open je gemakkelijk door te bevestigen, that's all.</span></li>
+        <li><img class="icon" th:src="@{images/rsz_mobile-icon.png}" alt="mobiele telefoon"><span>Direct online inzicht. Je regelt een overboeking gemakkelijk online.</span></li>
+        <li><img class="icon" th:src="@{images/rsz_questionmark.png}" alt="vraagteken">Er zit altijd iemand voor je klaar op een van onze Parque Banques</li>
+    </ul>
 </div>
 
 <div class="knop-div">
@@ -33,6 +40,7 @@
 
     </form>
 </div>
+        </div>
 
 </body>
 </html>
