--- a/parque_banque_server/src/main/resources/static/css/newprivateaccount.css
+++ b/parque_banque_server/src/main/resources/static/css/newprivateaccount.css
@@ -1,57 +1,72 @@
 .hoofd-div{
-
+    
+    background-color:#37AD49;
     padding-top: 5%;
     padding-left: 20%;
     margin-top: 3%;
     margin-left: -8%;
     margin-right: -8%;
-    background-color:#37AD49;
+    box-shadow: grey 0 0 3px;
     font-family:Montserrat;
     margin-bottom: 10%;
 
 }
+
+
 .sub-div{
 
-    padding-left: 20%;
+    padding-left: 10%;
     font-family: sans-serif;
     font-size: 1.1em;
-    margin-top: -5%;
-    margin-left: -8%;
-    margin-right: 55%;
+    max-width: 500px;
 }
-
 
 .tekst-div{
-
-    padding-left: 20%;
-    font-family: sans-serif;
-    font-size: 1.1em;
-    margin-top: 2%;
-    margin-left: -8%;
-    margin-right: 65%;
+    padding-left: 10%;
+   display: block;
+     margin: 0;
+    max-width: 500px;
+    font-family: sans-serif; 
+  
 }
+
+.tekst-div ul {
+    list-style-type:none;
+    font-size: 14px;
+}
+
+.tekst-div ul li {
+    margin-bottom: 5px;
+}
+
+.icon {
+    margin-right: 7px;
+    position: relative;
+    top: 10px;
+    width: 35px;
+    
+}
+
+
 .knop-div{
 
-
-    margin-top:   10%;
+    margin-top:   5%;
     padding-left: 20%;
     margin-left: -8%;
     margin-right: -8%;
-
-
-
+   
 }
 
 
 #bevestigen{
     padding: 20px 40px;
     color: #fff;
-    border-radius: 25px;
+    border-radius: 15px;
     background-color: #37AD49;
     border: 2px solid #37AD49;
     border-color: #37AD49;
+    box-shadow: grey 0 0 3px;
     font-family: sans-serif;
-    font-weight: bold;
     font-size: 1.0em;
     cursor: pointer;
 
@@ -60,12 +75,12 @@
 #terug{
     padding: 20px 40px;
     color: #fff;
-    border-radius: 25px;
+    border-radius: 15px;
     background-color: #37AD49;
     border: 2px solid #37AD49;
     border-color: #37AD49;
+    box-shadow: grey 0 0 3px;
     font-family: sans-serif;
-    font-weight: bold;
     font-size: 1.0em;
     cursor: pointer;
     margin-left: 10px;
