--- a/parque_banque_server/src/main/resources/static/css/mkbtable.css
+++ b/parque_banque_server/src/main/resources/static/css/mkbtable.css
@@ -42,4 +42,23 @@
     border-bottom: 3px solid black;
 }
 
+.button-group input[type=submit]{
+    background-color: black;
+    border: none;
+    color: white;
+    padding: 10px 23px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 1.0em;
+    float: left;
+    margin-top:   1%;
+
+
+
+
+}
+
 
