--- a/parque_banque_server/src/main/resources/templates/overviewprivateaccounts.html
+++ b/parque_banque_server/src/main/resources/templates/overviewprivateaccounts.html
@@ -4,34 +4,40 @@
     <meta charset="UTF-8">
     <title>Overzicht Particulier</title>
     <link th:href="@{/css/mkbtable.css}" href="../static/css/mkbtable.css" rel="stylesheet">
+    <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
 
 </head>
 <body>
-<a href="/uitloggen"><button>Uitloggen</button></a>
-<a href="/personeel-home"><button>Terug</button></a>
+<nav class="navigation">
+    <ul>
+        <li class= "logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque"></a></li>
+        <li class="nav-link"><a  href="/uitloggen">Uitloggen</a></li>
+    </ul>
 
-    <main>
-        <h1>Overzicht particuliere rekeninghouders</h1>
+</nav>
 
-        <table id="ranking-table" table class="content-table">
-            <thead>
-            <tr>
-                <th>Nummer</th>
-                <th>Klant</th>
-                <th>Saldo</th>
-                <th>Aantal Rekeningen</th>
-            </tr>
-            </thead>
-            <tr th:each="key, index : ${richestCustomers.keySet()}">
-                <td th:text="${index.count}"></td>
-                <td th:text="${richestCustomers.get(key)[0].firstName} + ' ' + ${richestCustomers.get(key)[0].affix} + ' ' + ${richestCustomers.get(key)[0].surName}"></td>
-                <td th:text="'€ ' + ${#numbers.formatDecimal(key/100.0, 0, 'POINT', 2, 'COMMA')}"></td>
-                <td th:text="${richestCustomers.get(key)[1]}" class="accountsColumn"></td>
-            </tr>
+<br><br><br><br>
+<h1>Overzicht Particuliere Rekeninghouders</h1>
 
-        </table>
-    </main>
+<table id="ranking-table" table class="content-table">
+    <thead>
+    <tr>
+        <th>Nummer</th>
+        <th>Klant</th>
+        <th>Saldo</th>
+        <th>Aantal Rekeningen</th>
+    </tr>
+    </thead>
+    <tr th:each="key, index : ${richestCustomers.keySet()}">
+        <td th:text="${index.count}"></td>
+        <td th:text="${richestCustomers.get(key)[0].firstName} + ' ' + ${richestCustomers.get(key)[0].affix} + ' ' + ${richestCustomers.get(key)[0].surName}"></td>
+        <td th:text="'€ ' + ${#numbers.formatDecimal(key/100.0, 0, 'POINT', 2, 'COMMA')}"></td>
+        <td th:text="${richestCustomers.get(key)[1]}" class="accountsColumn"></td>
+    </tr>
+
+</table>
+
 </body>
 </html>
