css hoofd mkb/particulieren nav knoppen, uitloggen werkt nog niet

--- a/parque_banque_server/src/main/resources/templates/overviewbusinessaccount.html
+++ b/parque_banque_server/src/main/resources/templates/overviewbusinessaccount.html
@@ -13,6 +13,7 @@
     <ul>
         <li class= "logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque"></a></li>
         <li class="nav-link"><a  href="/uitloggen">Uitloggen</a></li>
+        <li class="nav-link"><a href="/personeel-home">Terug</a></li>
     </ul>
 
 </nav>
