--- a/parque_banque_server/src/main/resources/templates/mostactivebusinessaccounts.html
+++ b/parque_banque_server/src/main/resources/templates/mostactivebusinessaccounts.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <title>Zakelijke klanten met de meeste transacties</title>
     <link th:href="@{/css/mkbtable.css}" href="../static/css/mkbtable.css" rel="stylesheet">
+    <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-<a href="/uitloggen"><button>Uitloggen</button></a>
-<a href="/personeel-home"><button>Terug</button></a>
+<nav class="navigation">
+    <ul>
+        <li class= "logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque"></a></li>
+        <li class= "nav-link"><a href="/uitloggen">Uitloggen</a></li>
+        <li class= "nav-link"><a href="/overzicht-bedrijven">Terug</a></li>
+    </ul>
+</nav>
 <main>
+    <br><br><br><br>
     <h2>Transacties</h2>
     <table table class="content-table">
         <thead>
