--- a/parque_banque_server/src/main/resources/templates/createlogin.html
+++ b/parque_banque_server/src/main/resources/templates/createlogin.html
@@ -35,7 +35,7 @@
                 <span id="usernameTaken" class="error" style="float:right; display: none">Deze gebruikersnaam bestaat al</span>
                 <span th:if="${usernameTaken}" class="error" style="float:right; display: none">Deze gebruikersnaam bestaat al</span>
                 <span id="usernameTooShort" class="error" style="float:right; display: none">Gebruikersnaam moet minstens 5 tekens lang zijn</span>
-                <input id="username" type="text" required pattern="[A-Za-z0-9]{5,255}" th:field="*{username}"
+                <input id="username" type="text" required placeholder="Minstens 5 tekens" pattern="[A-Za-z0-9]{5,255}" th:field="*{username}"
                        title="Gebruikersnaam moet minimaal 5 tekens lang zijn (alleen letters en cijfers)"
                        oninvalid="setCustomValidity('Gebruikersnaam moet minimaal 5 tekens lang zijn (alleen letters en cijfers)')"
                        oninput="setCustomValidity('')" />
@@ -44,6 +44,7 @@
                 <label for="password">Wachtwoord</label>
                 <progress max="100" value="0" id="strength"></progress>
                 <input id="password" type="password" required
+                       placeholder="Minstens 8 tekens (met hoofdletter, kleine letter, cijfer en een speciaal teken)"
                        pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,255}$" th:field="*{password}"
                        title="Wachtwoord moet minstens 8 tekens lang zijn, en in elk geval een hoofdletter, een kleine letter, een cijfer een een speciaal teken (@$!%?&) bevatten"
                        oninvalid="setCustomValidity('Wachtwoord moet minstens 8 tekens lang zijn, en in elk ' +
