--- a/parque_banque_server/src/main/resources/static/css/employeehome.css
+++ b/parque_banque_server/src/main/resources/static/css/employeehome.css
@@ -37,7 +37,7 @@ main {
 
 
 /* RIGHT SIDE NAVIGATION */
-.maintopright, .mainright {
+.mainright {
     float: right;
     width: 23%;
     border: thick solid #37ad49;
@@ -49,15 +49,13 @@ main {
     padding: 10px;
     margin-top: 0;
 }
-.employeenav h3,
-.agenda h3 {
+.employeenav h3 {
     font-size: 18px;
     font-weight: lighter;
     margin-top: 5px;
     margin-bottom: 5px;
 }
-.employeenav h4,
-.agenda h4 {
+.employeenav h4 {
     font-size: 15px;
     font-weight: lighter;
     margin-top: 10px;
@@ -71,17 +69,4 @@ main {
 .employeenav p {
     margin-top: 0;
     margin-bottom: 2px;
-}
-.agenda p {
-    font-size: 14px;
-    font-weight: lighter;
-    margin-top: 2px;
-    margin-bottom: 2px;
-}
-
-
-.mainright .agenda {
-    padding: 10px;
-    margin-top: 0;
-    margin-bottom: 0;
 }
