--- a/parque_banque_server/src/main/resources/static/css/newprivateaccount.css
+++ b/parque_banque_server/src/main/resources/static/css/newprivateaccount.css
@@ -8,7 +8,7 @@
     margin-right: -8%;
     box-shadow: grey 0 0 3px;
     font-family:Montserrat;
-    margin-bottom: 10%;
+   margin-bottom: 3%;
 
 }
 
@@ -62,9 +62,9 @@
     padding: 20px 40px;
     color: #fff;
     border-radius: 15px;
-    background-color: #37AD49;
-    border: 2px solid #37AD49;
-    border-color: #37AD49;
+    background-color: #2e2a2a;
+    border: 2px solid #2e2a2a;
+    border-color: #2e2a2a;
     box-shadow: grey 0 0 3px;
     font-family: sans-serif;
     font-size: 1.0em;
@@ -76,9 +76,9 @@
     padding: 20px 40px;
     color: #fff;
     border-radius: 15px;
-    background-color: #37AD49;
-    border: 2px solid #37AD49;
-    border-color: #37AD49;
+    background-color: #2e2a2a;
+    border: 2px solid #2e2a2a;
+    border-color: #2e2a2a;
     box-shadow: grey 0 0 3px;
     font-family: sans-serif;
     font-size: 1.0em;
