--- a/parque_banque_server/src/main/resources/templates/addaccountholder.html
+++ b/parque_banque_server/src/main/resources/templates/addaccountholder.html
@@ -5,6 +5,7 @@
     <title>Rekeninghouder toevoegen | Parque Banque</title>
     <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
     <link th:href="@{/css/confirmwindow.css}" rel="stylesheet"/>
+    <link th:href="@{/css/addaccountholder.css}" href="../static/css/addaccountholder.css" rel="stylesheet">
     <script type="text/javascript" src="javascript/addaccountholder.js" defer></script>
     <script type="text/javascript" src="javascript/confirmaddaccountholder.js" defer></script>
 
@@ -25,39 +26,45 @@
 </nav>
 
 <main>
-
-    <h1>Rekeninghouder toevoegen</h1>
-    <p>Vul hieronder de gebruikersnaam in van de klant die u wilt toevoegen aan rekening <span th:text="${iban}"></span>.</p>
-    <p>De persoon die u wilt toevoegen moet dus al klant bij Parque Banque zijn.
-    Bedenk ook een code van 5 cijfers zodat de andere klant veilig gekoppeld kan worden.</p>
+<div class="container" >
+    <div class="formheader">
+        <h1>Rekeninghouder toevoegen</h1>
+        <p>Vul hieronder de gebruikersnaam in van de klant die u wilt toevoegen aan rekening <span th:text="${iban}"></span>.</p>
+    </div>
     <form id="form" action="#" th:action="@{/rekeninghouder-toevoegen}" th:object="${addAccountHolderFormBean}" method="post">
         <div>
             <span id="unkownError" class="error" style="display: none">Er ging iets mis. Controleer de gegevens goed.
                 De klant die u wilt toevoegen moet al een klant zijn van Parque Banque, en nog geen mederekeninghouder zijn.
                 De beveiligingscode mag niet uit dezelfde getallen bestaan of een oplopende of aflopende rij zijn.</span>
         </div>
-        <div>
+    
+        <p>De persoon moet klant zijn bij Parque Banque.
+        Bedenk ook een code van 5 cijfers zodat de nieuwe rekeninghouder veilig gekoppeld kan worden.</p>
+        <div class="username">
             <label for="username">Gebruikersnaam</label>
-            <span id="unknownUsername" class="error" style="float: right; display: none">Deze gebruikersnaam bestaat niet</span>
-            <span id="userAlreadyAdded" class="error" style="float: right; display: none">Deze klant is al mederekeninghouder</span>
             <input id="username" type="text" required pattern="[A-Za-z0-9]{5,255}" th:field="*{username}"
                    title="Vul de gebruikersnaam in"
                    oninvalid="setCustomValidity('Een gebruikersnaam bestaat uit minimaal 5 tekens (alleen letters en cijfers)')"
                    oninput="setCustomValidity('')" />
+            <span id="unknownUsername" class="error" style=" display: none">Deze gebruikersnaam bestaat niet</span>
+            <span id="userAlreadyAdded" class="error" style="display: none">Deze klant is al mederekeninghouder</span>
         </div>
-        <div>
+        <div class="security-code">
             <label for="securityCode">Beveiligingscode</label>
-            <span id="insecureCode" class="error" style="float: right; display: none">Dit is geen veilige code</span>
             <input id="securityCode" type="text" required pattern="[0-9]{5}" th:field="*{securityCode}"
                    title="Verzin een een beveiligingscode van 5 cijfers"
                    oninvalid="setCustomValidity('Beveiligingscode moet bestaan uit 5 cijfers')"
                    oninput="setCustomValidity('')" />
+            <span id="insecureCode" class="error" style="display:none ">Dit is geen veilige code</span>
         </div>
+    
         <div>
             <button id="submitbutton" type="submit">OK</button>
         </div>
     </form>
-    <a id="backbutton" th:href="'/rekening-overzicht/details' + ${iban}"><button>Terug</button></a>
+    <div class="back"><a id="backbutton" th:href="'/rekening-overzicht/details' + ${iban}"><button>Terug</button></a></div>
+    
+    </div>
 </main>
 
     <script>
