--- a/parque_banque_server/src/main/resources/templates/newcompany.html
+++ b/parque_banque_server/src/main/resources/templates/newcompany.html
@@ -1,87 +1,73 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="">
 <head>
     <meta charset="UTF-8">
     <title>Nieuw bedrijf aanmaken bij Parque Banque</title>
-    <link th:href="@{/css/signup.css}" rel="stylesheet">
+    <link th:href="@{/css/main.css}" href="../static/css/company.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <script type="text/javascript" src="/javascript/kvkinuse.js" defer></script>
-    <style type="text/css">
-        img{
-            text-align: left;
-            display: inline-block;
-            height: 50px;
-        }
-        body {
-            text-align: center;
-        }
-        label {
-            display: inline-block;
-            width: 100px;
-            margin: 5px;
-            text-align: left;
-        }
-        input {
-            width: 20%;
-        }
-        button {
-            padding: 5px;
-            margin: 10px;
-            border-left: none;
-            border-right: none;
-            border-top: none;
-            border-bottom-color: #242121;
-            background-color: #37AD49;
-            color: white;
-        }
 
-    </style>
 </head>
 <body>
-<a href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque" class="logolink"></a>
-<a href="/uitloggen">Uitloggen</a>
-<br>
-<h1>Bedrijf aanmelden bij Parque Banque</h1>
-<p>Vul hieronder de gegevens in van het bedrijf waarvoor u een rekening wilt openen:</p>
-<p>Velden met een * zijn verplicht.</p><br>
-<!--Formulier met nieuwe bedrijfsgegevens-->
-<div>
-<form th:action="@{/nieuw-bedrijf-aanmaken}" method="post" th:object="${companyFormBean}">
-    <label>Kvk-nummer *</label>
-    <span id="kvkBekend" class="error" style="float:right; display: none">
-        Er lijkt al een bedrijf met dit Kvk-nummer bij ons bekend te zijn.
-        Kloppen deze gegevens? Neem bij twijfel contact op, dan helpen we u persoonlijk.</span>
-    <input type="text" th:field="*{kvkNr}"
-           required pattern="^[0-9]{8}$"
-           title="Het KvK-nummer bestaat uit 8 cijfers."
-           oninvalid="setCustomValidity('Controleer of het KvK-nummer klopt')"
-           oninput="setCustomValidity('')">
-    <br/><br/>
+<nav class="navigation">
+    <ul>
+        <li class= "logo-link"><a id="logo" href="/">
+            <img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque"></a></li>
+    </ul>
+</nav>
 
-    <label>Btw-nummer *</label>
-    <input type="text" th:field="*{btwNr}"
-           required pattern="^[A-Za-z]{2}[0-9]{9}[Bb][0-9]{2}$"
-           title="Het btw-nummer bestaat uit 14 tekens en begint met een landcode, bijvoorbeeld NL."
-           oninvalid="setCustomValidity('Controleer of het btw-nummer klopt')"
-           oninput="setCustomValidity('')">
-        <br><br>
+    <div id="form">
+        <form th:action="@{/nieuw-bedrijf-aanmaken}" method="post" th:object="${companyFormBean}">
 
-    <label>Bedrijfsnaam *</label>
-    <input type="text" th:field="*{companyName}"
-           required pattern="^(?!\s)(?!.*\s$)(?=.*[a-zA-Z0-9])[a-zA-Z0-9 '~@#&?!*+-]{2,254}$"
-           oninvalid="setCustomValidity('Controleer of de bedrijfsnaam klopt.')"
-           oninput="setCustomValidity('')"/>
-        <br><br>
+            <h1>Bedrijf aanmelden bij Parque Banque</h1>
+            <p>Vul hieronder de gegevens in van het bedrijf waarvoor u een rekening wilt openen:</p>
 
-    <label>Sector *</label>
-    <select id="sectorField" th:field="*{id}">
-        <option th:each="sector : ${sectoren}" th:value="${sector.getId()}" th:text="${sector.getName()}"
-                th:selected="${companyFormBean.id == sector.getId()}"
-                oninput="setCustomValidity('')"></option>
-    </select>
-        <br><br>
-    <button type="submit" name="action" value="send">Bedrijf aanmelden</button>
-</form>
-</div>
+            <ul>
+                <li>
+                    <label>Kvk-nummer * </label>
+                    <input class="field" type="text" placeholder=" 12345678" th:field="*{kvkNr}"
+                    required pattern="^[0-9]{8}$"
+                    title="Het KvK-nummer bestaat uit 8 cijfers."
+                    oninvalid="setCustomValidity('Controleer of het KvK-nummer klopt')"
+                    oninput="setCustomValidity('')">
+
+                </li>
+
+                <li>
+                    <label> Btw-nummer * </label>
+                    <input class="field" type="text" placeholder=" NL123456789B00" th:field="*{btwNr}"
+                    required pattern="^[A-Za-z]{2}[0-9]{9}[Bb][0-9]{2}$"
+                    title="Het btw-nummer bestaat uit 14 tekens en begint met een landcode, bijvoorbeeld NL."
+                    oninvalid="setCustomValidity('Controleer of het btw-nummer klopt')"
+                    oninput="setCustomValidity('')">
+                </li>
+
+                <li>
+                    <label> Bedrijfsnaam * </label>
+                    <label>
+                        <input class="field" type="text" placeholder=" Bedrijfsnaam" th:field="*{companyName}"
+                        required pattern="^(?!\s)(?!.*\s$)(?=.*[a-zA-Z0-9])[a-zA-Z0-9 '~@#&?!*+-]{2,254}$"
+                        oninvalid="setCustomValidity('Controleer of de bedrijfsnaam klopt.')"
+                        oninput="setCustomValidity('')"/>
+                    </label>
+                </li>
+
+                <li>
+                    <label> Sector * </label>
+                    <label>
+                        <select option class="field"  th:field="*{id}"> th:each="sector : ${sectoren}" th:value="${sector.getId()}" th:text="${sector.getName()}"
+                        th:selected="${companyFormBean.id == sector.getId()}"
+                        oninput="setCustomValidity('')"></select>
+                    </label>
+
+                </li>
+
+                <li>
+            <div id="button">
+            <button type="submit" name="action" value="send">Bedrijf aanmelden</button>
+            </div>
+                </li>
+            </ul>
+</form></div>
 </body>
 </html>
