--- a/parque_banque_server/src/main/resources/templates/newcompany.html
+++ b/parque_banque_server/src/main/resources/templates/newcompany.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Nieuw bedrijf aanmaken bij Parque Banque</title>
-    <link th:href="@{/css/main.css}" href="../static/css/company.css" rel="stylesheet">
+    <link th:href="@{/css/company.css}" href="../static/css/company.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <script type="text/javascript" src="/javascript/kvkinuse.js" defer></script>
 
