css voor errorpagina en wat kleine aanpassingen overig

--- a/parque_banque_server/src/main/resources/templates/index.html
+++ b/parque_banque_server/src/main/resources/templates/index.html
@@ -56,6 +56,7 @@
             border-radius: 5px;
             box-shadow: grey 0 0 3px;
             width: 300px;
+
         }
         
         .information figure figcaption {
@@ -96,7 +97,7 @@
             <figcaption>Open een rekening bij Parque Banque voor jouw bedrijf of privézaken. Binnen enkele klikken is jouw eerste overboeking een feit!</figcaption>
         </figure>
         <figure>
-            <img th:src="@{images/rsz_1canva_-_couple_on_a_bench_in_the_park.jpg}" src="../static/images/rsz_1canva_-_couple_on_a_bench_in_the_park.jpg" alt="couple sitting on bench">
+            <img th:src="@{images/two-men.jpg}" src="../static/images/two-men.jpg" alt="couple sitting on bench">
             <figcaption>Een rekening delen met familie, vrienden of buurman? Koppel online een nieuwe rekeninghouder met behulp van ons veilige code systeem.</figcaption>
         </figure>
     
