--- a/parque_banque_server/src/main/resources/templates/error.html
+++ b/parque_banque_server/src/main/resources/templates/error.html
@@ -3,11 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <title>Foutpagina</title>
+
+    <style>
+
+        .main {
+            width: 1200px;
+            height: 1200px;
+            display: block;
+            position: relative;
+            
+            
+        }
+        
+        .main::after {
+            content: "";
+            background-image: url("images/oeps-pic.jpg");
+            background-size: 100%;
+            background-repeat: no-repeat;
+            border-radius: 10px;
+            opacity: 0.5;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            position: absolute;
+            z-index: -1;  
+        }
+        
+        .content {
+            text-align: center;
+            background-color: #37ad49;
+            border-radius: 5px;
+            box-shadow: grey 0 0 4px;
+            display: block;
+            position:absolute;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 1.1em;
+            width: 350px;
+            margin-top: 550px;
+            margin-left: 20px;
+            
+        }
+        
+        a  {
+          text-decoration: none; 
+          
+            border-radius: 5px;
+        display: inline-block;
+        background-color: black; 
+        color:white;
+        padding: 14px 25px;
+            margin-left: 3px;
+        text-align: center;
+        }
+        
+        a:hover {
+            box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+        }
+        
+        
+        
+        
+        
+
+    </style>
 </head>
+
+
 <body>
-    <h1>Oeps!</h1>
-    <p>Er is iets mis gegaan.</p>
-    <p>Als u deze pagina vaker ziet, neem dan contact op met Parque Banque.</p>
-    <p>Anders ga <a href="/">terug naar home</a> </p>
+    <div class = "main">
+        <div class="content">
+            <h1>Oeps!</h1>
+            <p>Er is iets mis gegaan.</p>
+            <p>Als u deze pagina vaker ziet, neem dan contact op met Parque Banque.</p>
+            <p>Anders ga <a href="/">terug naar home</a> </p>
+        </div>
+    </div>
 </body>
 </html>
