--- a/parque_banque_server/src/main/resources/templates/averagebalancesector.html
+++ b/parque_banque_server/src/main/resources/templates/averagebalancesector.html
@@ -17,7 +17,7 @@
 </nav>
 <main>
     <br><br><br><br>
-<h2>Sectoren</h2>
+<h2 class="header-left">Sectoren </h2>
 <table table class="content-table">
     <thead>
     <tr>
