--- a/parque_banque_server/src/main/resources/templates/mostactivebusinessaccounts.html
+++ b/parque_banque_server/src/main/resources/templates/mostactivebusinessaccounts.html
@@ -17,7 +17,7 @@
 </nav>
 <main>
     <br><br><br><br>
-    <h2>Transacties</h2>
+    <h2 class="header-left">Transacties</h2>
     <table table class="content-table">
         <thead>
         <tr>
