--- a/parque_banque_server/src/main/resources/templates/overviewbusinessaccount.html
+++ b/parque_banque_server/src/main/resources/templates/overviewbusinessaccount.html
@@ -21,7 +21,7 @@
 
 <br><br><br><br>
 
-<h1>Overzicht Bedrijfsrekeningen</h1>
+<h1 class="header-left">Overzicht Bedrijfsrekeningen</h1>
 <div class="button-group">
     <form action="/overzicht-bedrijven" method="post" th:object="${richestBusinessCustomers}" >
 
