--- a/parque_banque_server/src/main/resources/templates/overviewprivateaccounts.html
+++ b/parque_banque_server/src/main/resources/templates/overviewprivateaccounts.html
@@ -20,7 +20,7 @@
 </nav>
 
 <br><br><br><br>
-<h1>Particuliere Rekeninghouders</h1>
+<h1 class="header-left">Particuliere Rekeninghouders</h1>
 
         <table id="ranking-table" table class="content-table">
             <thead>
