--- a/parque_banque_server/src/main/resources/templates/tenrichestbusinessaccounts.html
+++ b/parque_banque_server/src/main/resources/templates/tenrichestbusinessaccounts.html
@@ -19,7 +19,7 @@
 </nav>
 <main>
     <br><br><br><br>
-<h2>Zakelijke Klanten</h2>
+<h2 class="header-left">Zakelijke Rekeninghouders</h2>
 <table id="mkb-list"  table class="content-table">
     <thead>
     <tr>
